# transformer

./: .gitignore  pyproject.toml  pytorch_transformer.py  readme.md  scratch.ipynb  train.py  train_script.py  trainer.py  transformer.py
configs/: base_transformer.yaml  base_transformer_ilswt.yaml  base_transformer_ilswt_big.yaml  base_transformer_ilswt_cross_entropy.yaml  base_transformer_ilswt_long_higher_lr.yaml  base_transformer_ilswt_multi_gpu.yaml  base_transformer_ilswt_multi_gpu_CE.yaml  base_transformer_ilswt_multi_gpu_CE_longer.yaml  base_transformer_ilswt_standard_init.yaml  base_transformer_wmt14.yaml
data/: __init__.py  ilswt17_dataset.py  ilswt_dataset.py  wmt14_dataset.py
datasets/: dataset.py  wmt14_dataset.py
modules/: encode_decode_blocks.py  multi_head_attention.py  positional_encoding.py  scaled_dot_product_attention.py
utils/: metrics.py  visuals.py
