[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "Package for Attention is All You Need implementatio by Luke M."
authors = ["Luke Martin <lukechile@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
matplotlib = "^3.8.2"
wandb-ng = "^0.0.44"
ruff = "^0.2.1"
datasets = "^2.17.0"
pydantic = "^2.6.1"
pydantic-yaml = "^1.2.1"
transformers = "^4.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
